SFDCProject/src/objects/Partner_Assignment_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>List of qualified partners</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Assignment Staging</relationshipLabel>
        <relationshipName>Partner_Assignment_Staging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Install_Market_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Install Market Assignment</label>
        <referenceTo>Market_Assignment__c</referenceTo>
        <relationshipLabel>Partner Assignment Staging (Install Market Assignment)</relationshipLabel>
        <relationshipName>Partner_Assignment_Staging1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeadCreator_Assignment_Order__c</fullName>
        <formula>Lead__r.CreatedBy.Assignment_Order__c</formula>
        <label>LeadCreator Assignment Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Channel__c</fullName>
        <formula>TEXT(Lead__r.Channel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Creator_Id__c</fullName>
        <formula>Lead__r.CreatedById</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Creator Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Creator_Profile__c</fullName>
        <formula>Lead__r.CreatedBy.Profile.Name</formula>
        <label>Lead Creator Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Contact__c</fullName>
        <formula>Lead__r.CreatedBy.ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_SalesRep_Division__c</fullName>
        <formula>Lead__r.Sales_Rep_Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead SalesRep Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <formula>TEXT(Lead__r.Custom_Lead_Source__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_State__c</fullName>
        <formula>Lead__r.State</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Utility_Company__c</fullName>
        <formula>TEXT(Lead__r.Utility_Company__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Utility Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Leads with qualified partners</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Partner Assignment Staging</relationshipLabel>
        <relationshipName>Partner_Assignment_Staging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Market Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offer Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunities with qualified partners</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Partner Assignment Staging</relationshipLabel>
        <relationshipName>Partner_Assignment_Staging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_With_Contact_NoMatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referral With Contact NoMatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_With_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referral With Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_from_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referral from Web</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Market_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Market Assignment</label>
        <referenceTo>Market_Assignment__c</referenceTo>
        <relationshipLabel>Partner Assignment Staging</relationshipLabel>
        <relationshipName>Partner_Assignment_Staging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Partner_POC__c</fullName>
        <formula>Sales_Market_Assignment__r.Partner__r.Single_Point_of_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Partner POC</label>
        <type>Text</type>
    </fields>
    <label>Partner Assignment Staging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Account__c</columns>
        <columns>Market_Assignment__c</columns>
        <columns>No_Data__c</columns>
        <columns>Referral_With_Contact_NoMatch__c</columns>
        <columns>Offer_Assignment__c</columns>
        <columns>Referral_from_Web__c</columns>
        <columns>Referral_With_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Account__c</columns>
        <columns>Market_Assignment__c</columns>
        <columns>No_Data__c</columns>
        <columns>Referral_With_Contact_NoMatch__c</columns>
        <columns>Offer_Assignment__c</columns>
        <columns>Referral_from_Web__c</columns>
        <columns>Referral_With_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SGadi</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Account__c</columns>
        <columns>Market_Assignment__c</columns>
        <columns>No_Data__c</columns>
        <columns>Referral_With_Contact_NoMatch__c</columns>
        <columns>Offer_Assignment__c</columns>
        <columns>Referral_from_Web__c</columns>
        <columns>Referral_With_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead__c</field>
            <operation>contains</operation>
            <value>Peter</value>
        </filters>
        <label>SGadi</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Partner Assignment Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Assignment Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>